src/test/ui/feature-gates/feature-gate-may-dangle.stderr
error[E0658]: may_dangle has unstable semantics and may be removed in the future
  --> $DIR/feature-gate-may-dangle.rs:6:13
   |
LL | unsafe impl<#[may_dangle] A> Drop for Pt<A> {
   |             ^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/34761
   = help: add #![feature(dropck_eyepatch)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
